# HoMi

./: .readthedocs.yaml  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  setup.py  snakefile
.github/workflows/: dag.yaml  pytest.yaml  setup-and-pytest.yaml
HoMi/: HoMi.py  snake_utils.py
benchmarking/: Compare_all_taxonomy_results.R  Compare_taxonomy.R  Plot_alt_splicing_benchmark.R  Plot_benchmarked_reads_breakdown.R  README.md  benchmark_host_removal_method.smk  benchmarking.smk  benchmarking_env.yaml  create_decontam_ref_human.py
benchmarking/Pereira/: Pereira_data.csv  dna_mock_community_HoMi_config.yaml  mock_community_HoMi_config.yaml  rna_mock_community_HoMi_config.yaml
benchmarking/conda_envs/: hostile.yaml  hostile_dev.yaml  r_env.yaml  sra_tools.yaml
benchmarking/semi/: dna_semi_HoMi_config.yaml  read_lengths.csv  rna_semi_HoMi_config.yaml  sample_data.csv  semi_HoMi_config.yaml  semi_homi_metadata.csv
benchmarking/semisynthetic/: simulate_semisynthetic.py
benchmarking/synthetic/: create_mock_community.py  (+17 more)
conda_envs/: fastqc.yaml  featureCounts.yaml  hostile.yaml  humann.yaml  kraken.yaml  r_env.yaml  seqtk.yml
deprecated/: snakefile
docs/: CONTRIBUTING.md  conf.py  index.rst  requirements.txt  tutorial.md
src/: HoMi.py  HoMi_cleanup.py  check_config.py  profile_setup.py  snake_utils.py  snakefile
tests/: example_config.yaml  example_metadata.csv  mock_community_sim_params.csv  test_HoMi_cleanup.py  test_check_config.py  test_counts_to_tpm.py  test_profile_setup.py  test_read_reports.py  test_snake_utils.py
(+49 files in other folders)
